// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Voucherify's groupEvent destination action: all fields 1`] = `
Object {
  "email": "roduv@hirjori.ba",
  "group_id": "^Ae(*CJn9s)K",
  "source_id": "^Ae(*CJn9s)K",
  "traits": Object {
    "testType": "^Ae(*CJn9s)K",
  },
}
`;

exports[`Testing snapshot for Voucherify's groupEvent destination action: required fields 1`] = `
Object {
  "group_id": "^Ae(*CJn9s)K",
  "source_id": "^Ae(*CJn9s)K",
}
`;
